# aequi

./: .dockerignore  .env.example  .gitignore  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  aequi_start_prompt.md  package-lock.json  package.json  tarpaulin-report.json  vite.config.ts
.github/actions/setup-rust-env/: action.yml
.github/workflows/: ci.yml  dependency-update.yml  docker-publish.yml  release-automation.yml  release.yml
crates/app/: Cargo.toml  tauri.conf.json
crates/app/capabilities/: default.json  mobile.json
crates/app/icons/: icon.icns
crates/app/src/: commands.rs  lib.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: account.rs  lib.rs  money.rs  period.rs  transaction.rs
crates/core/src/export/: beancount.rs  mod.rs  qif.rs
crates/core/src/invoice/: compute.rs  contact.rs  document.rs  lifecycle.rs  mod.rs  payment.rs
crates/core/src/tax/: community.rs  engine.rs  mod.rs  rules.rs  schedule_c.rs
crates/core/test_data/: tax_rules_2026.toml
crates/email/: Cargo.toml
crates/email/src/: config.rs  deliver.rs  lib.rs
crates/import/: Cargo.toml
crates/import/src/: actual.rs  ai_categorize.rs  csv.rs  lib.rs  match_engine.rs  ofx.rs  plaid.rs  profile_sharing.rs  rules.rs  util.rs  wave.rs  work_items.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: audit.rs  lib.rs  main.rs  permissions.rs  protocol.rs  server.rs  sse.rs  tests.rs
crates/mcp/src/tools/: accounts.rs  import.rs  invoices.rs  mod.rs  receipts.rs  reconciliation.rs  rules.rs  tax.rs  transactions.rs
crates/ocr/: Cargo.toml
crates/ocr/src/: extract.rs  hash.rs  lib.rs  pipeline.rs  preprocess.rs  recognizer.rs  types.rs
crates/pdf/: Cargo.toml
crates/pdf/src/: invoice_pdf.rs  lib.rs  typst_pdf.rs
crates/server/: Cargo.toml
crates/server/src/: daimon.rs  error.rs  main.rs  oidc.rs  state.rs
crates/server/src/routes/: accounts.rs  health.rs  invoices.rs  mod.rs  plaid.rs  receipts.rs  reconciliation.rs  reports.rs  rules.rs  stripe.rs  tax.rs  transactions.rs
crates/storage/: Cargo.toml
crates/storage/src/: backup.rs  db.rs  lib.rs  migrate.rs
crates/storage/src/migrations/: V001__initial_schema.down.sql  V001__initial_schema.sql  V002__indexes_and_constraints.down.sql  V002__indexes_and_constraints.sql
docs/adr/: 001-tauri-v2-desktop-shell.md  002-sqlite-storage.md  003-decimal-money.md  004-rust-backend-is-app.md  005-mcp-server.md  006-dual-license.md  007-mobile-via-tauri-v2.md  008-tax-engine-architecture.md  009-invoice-engine.md  010-http-api-containerization.md  011-mcp-server.md  012-data-export.md  README.md
docs/development/: aequi_formalation.md  roadmap.md  versioning.md
rules/tax/us/: 2026.toml
scripts/: bump-version.sh
src/: index.css  index.html  main.tsx
src/components/: AppShell.tsx  CameraCapture.tsx  ErrorBoundary.tsx  ShortcutsOverlay.tsx  Skeleton.tsx  Toast.tsx
src/lib/: api.ts  capture.ts  format.ts  keyboard.ts
src/pages/: AccountsPage.tsx  ContactsPage.tsx  DashboardPage.tsx  InvoicesPage.tsx  ReceiptsPage.tsx  SettingsPage.tsx  TaxPage.tsx  TransactionsPage.tsx
