[package]
name = "aequi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "aequi"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aequi-core = { path = "../core" }
aequi-storage = { path = "../storage" }
aequi-ocr = { path = "../ocr" }
aequi-email = { path = "../email" }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde.workspace = true
serde_json = { workspace = true }
tokio.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
sqlx.workspace = true
directories = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = { workspace = true }
tauri-plugin-updater = "2.10.0"
tauri-plugin-notification = "2.3.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
