[package]
name = "aequi-import"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aequi-core = { path = "../core" }
csv = "1.3"
thiserror = "2.0"
chrono = { workspace = true }
serde = { workspace = true }
rust_decimal = { workspace = true }
toml = "0.8"
regex = { workspace = true }
