[package]
name = "aequi-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "aequi-mcp"
path = "src/main.rs"

[dependencies]
aequi-core = { path = "../core" }
aequi-storage = { path = "../storage" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-util", "io-std"] }
chrono.workspace = true
rust_decimal.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
sha2.workspace = true
sqlx.workspace = true
axum = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
tokio-stream = { version = "0.1", optional = true }
async-stream = { version = "0.3", optional = true }

[dev-dependencies]
tower = { workspace = true }

[features]
default = []
sse = ["axum", "tower-http", "uuid", "tokio-stream", "async-stream"]
