[package]
name = "aequi-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "aequi-server"
path = "src/main.rs"

[dependencies]
aequi-core = { path = "../core" }
aequi-storage = { path = "../storage" }
aequi-email = { path = "../email" }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
anyhow.workspace = true
sqlx.workspace = true
reqwest.workspace = true
uuid.workspace = true
tracing-bunyan-formatter = "0.3.10"
jsonwebtoken = "10.3.0"
